syntax = "proto3";

option go_package = "github.com/dawsonalex/homehub/cmd/todo/schema";

package schema;

service Todo {
  rpc CreateTodo (CreateTodoRequest) returns (CreateTodoResponse) {}
}

message CreateTodoRequest {
  string description = 1;
}

message CreateTodoResponse {
  uint32 id = 1;
  string description = 2;
  string created_on = 3;
  string modified_on = 4;
}